--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.3",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.3",
     "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.10",
     "file-loader": "^1.1.10",
     "html-webpack-plugin": "^3.0.4",
+    "ncp": "^2.0.0",
+    "rimraf": "^2.6.2",
     "style-loader": "^0.20.2",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9",
@@ -21,10 +23,12 @@
   },
   "dependencies": {
     "auth0-js": "^9.3.1",
+    "lodash": "^4.17.10",
     "mithril": "^1.1.6"
   },
   "scripts": {
     "start": "webpack-dev-server --open",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js --display-error-details",
+    "postbuild": "[ -f ./deploy.js ] && node deploy.js"
   }
 }
