--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "auth0-js": "^9.3.1",
+    "dragula": "^3.7.2",
     "lodash": "^4.17.10",
     "mithril": "^1.1.6",
     "moment": "^2.22.2",
