--- a/package.json
+++ b/package.json
@@ -1,41 +1,45 @@
 {
-  "name": "conference-tracker",
+  "name": "festivaltime",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.3",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.18",
-    "css-loader": "^0.28.10",
-    "file-loader": "^1.1.10",
+    "clean-webpack-plugin": "^1.0.0",
+    "css-loader": "^2.1.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.0.4",
     "ncp": "^2.0.0",
-    "rimraf": "^2.6.2",
-    "style-loader": "^0.20.2",
-    "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.9",
-    "webpack-dev-server": "^3.1.0"
+    "rimraf": "^2.6.3",
+    "style-loader": "^0.23.1",
+    "webpack-dev-server": "^3.1.14",
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.2.0",
+    "script-loader": "^0.7.2",
+    "url-loader": "^1.1.2"
   },
   "dependencies": {
-    "auth0-js": "^9.3.1",
-    "blueimp-file-upload": "^9.22.0",
+    "auth0-js": "^9.8.2",
+    "blueimp-file-upload": "^9.28.0",
     "cloudinary-core": "^2.5.0",
     "cloudinary-jquery-file-upload": "^2.5.0",
     "dragula": "^3.7.2",
     "jquery": "^3.3.1",
-    "loadjs": "^3.5.4",
-    "lodash": "^4.17.10",
+    "loadjs": "^3.5.5",
+    "lodash": "^4.17.11",
     "mithril": "^1.1.6",
-    "moment": "^2.22.2",
-    "moment-timezone": "^0.5.21",
-    "promise-polyfill": "^8.1.0",
-    "script-loader": "^0.7.2",
-    "url-loader": "^1.1.2"
+    "moment": "^2.23.0",
+    "moment-timezone": "^0.5.23",
+    "promise-polyfill": "^8.1.0"
   },
   "scripts": {
     "start": "webpack-dev-server --open",
