--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.0.4",
+    "mini-css-extract-plugin": "^0.5.0",
     "ncp": "^2.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "rimraf": "^2.6.3",
+    "script-loader": "^0.7.2",
     "style-loader": "^0.23.1",
-    "webpack-dev-server": "^3.1.14",
+    "terser-webpack-plugin": "^1.2.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.0",
-    "script-loader": "^0.7.2",
-    "url-loader": "^1.1.2"
+    "webpack-dev-server": "^3.1.14",
+    "workbox-webpack-plugin": "^3.6.3"
   },
   "dependencies": {
     "auth0-js": "^9.8.2",
@@ -35,6 +39,7 @@
     "dragula": "^3.7.2",
     "jquery": "^3.3.1",
     "loadjs": "^3.5.5",
+    "localforage": "^1.7.3",
     "lodash": "^4.17.11",
     "mithril": "^1.1.6",
     "moment": "^2.23.0",
@@ -43,6 +48,8 @@
   },
   "scripts": {
     "start": "webpack-dev-server --open",
+    "set-dev": "cp webpack.config.dev.js webpack.config.js",
+    "set-prod": "cp webpack.config.prod.js webpack.config.js",
     "build": "webpack --config webpack.config.js --display-error-details",
     "postbuild": "[ -f ./deploy.js ] && node deploy.js"
   }
