--- a/package.json
+++ b/package.json
@@ -44,13 +44,15 @@
     "mithril": "^1.1.6",
     "moment": "^2.23.0",
     "moment-timezone": "^0.5.23",
-    "promise-polyfill": "^8.1.0"
+    "promise-polyfill": "^8.1.0",
+    "smart-search": "^0.2.0"
   },
   "scripts": {
     "start": "webpack-dev-server --open",
     "set-dev": "cp webpack.config.dev.js webpack.config.js",
     "set-prod": "cp webpack.config.prod.js webpack.config.js",
+    "worker": "workbox injectManifest workbox-config.js",
     "build": "webpack --config webpack.config.js --display-error-details",
-    "postbuild": "[ -f ./deploy.js ] && node deploy.js"
+    "postbuild": "npm run worker && [ -f ./deploy.js ] && node deploy.js"
   }
 }
