--- a/package.json
+++ b/package.json
@@ -51,8 +51,9 @@
     "start": "webpack-dev-server --open",
     "set-dev": "cp webpack.config.dev.js webpack.config.js",
     "set-prod": "cp webpack.config.prod.js webpack.config.js",
+    "cp-man": "cp src/manifest.webmanifest dist/",
     "worker": "workbox injectManifest workbox-config.js",
     "build": "webpack --config webpack.config.js --display-error-details",
-    "postbuild": "npm run worker && [ -f ./deploy.js ] && node deploy.js"
+    "postbuild": "npm run worker && npm run cp-man && [ -f ./deploy.js ] && node deploy.js"
   }
 }
