--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html-webpack-plugin": "^3.0.4",
     "mini-css-extract-plugin": "^0.5.0",
     "ncp": "^2.0.0",
+    "onchange": "^5.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "rimraf": "^2.6.3",
     "script-loader": "^0.7.2",
@@ -42,6 +43,7 @@
     "loadjs": "^3.5.5",
     "localforage": "^1.7.3",
     "lodash": "^4.17.11",
+    "memoizee": "^0.4.14",
     "mithril": "^1.1.6",
     "moment": "^2.23.0",
     "moment-timezone": "^0.5.23",
@@ -49,6 +51,7 @@
     "smart-search": "^0.2.0"
   },
   "scripts": {
+    "watch": "onchange 'src/**/*' -- npm run build",
     "start": "webpack-dev-server --open",
     "set-dev": "cp webpack.config.dev.js webpack.config.js",
     "set-prod": "cp webpack.config.prod.js webpack.config.js",
