--- a/package.json
+++ b/package.json
@@ -4,24 +4,27 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/node": "^7.6.3",
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^2.1.0",
+    "esm": "^3.2.25",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.0.4",
+    "jsdom": "^15.2.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "mithril-query": "^3.0.1",
     "ncp": "^2.0.0",
     "onchange": "^5.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "ospec": "^4.0.1",
     "rimraf": "^2.6.3",
     "script-loader": "^0.7.2",
     "style-loader": "^0.23.1",
@@ -39,18 +42,19 @@
     "cloudinary-jquery-file-upload": "^2.6.2",
     "dragula": "^3.7.2",
     "empty-promise": "^1.2.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "loadjs": "^3.5.5",
     "localforage": "^1.7.3",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "memoizee": "^0.4.14",
-    "mithril": "^1.1.6",
+    "mithril": "^1.1.7",
     "moment": "^2.23.0",
     "moment-timezone": "^0.5.23",
     "promise-polyfill": "^8.1.0",
     "smart-search": "^0.2.0"
   },
   "scripts": {
+    "test": "npx babel-node node_modules/.bin/ospec './tests/**.test.js' --require ./tests/test-setup.js",
     "watch": "onchange 'src/**/*' -- npm run build",
     "start": "webpack-dev-server --open",
     "set-dev": "cp webpack.config.dev.js webpack.config.js",
