--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "festivaltime",
+  "name": "festigram-client",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -36,7 +36,6 @@
     "onchange": "^6.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "ospec": "^4.0.1",
-    "proxyquire": "^2.1.3",
     "rimraf": "^3.0.0",
     "script-loader": "^0.7.2",
     "style-loader": "^1.0.0",
@@ -46,18 +45,14 @@
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.9.0",
     "@auth0/auth0-spa-js": "^1.5.0",
-    "auth0-js": "^9.11.3",
     "blueimp-file-upload": "^10.2.0",
     "cloudinary-core": "^2.7.4",
     "cloudinary-jquery-file-upload": "^2.7.4",
     "dragula": "^3.7.2",
     "empty-promise": "^1.2.0",
     "jquery": "^3.4.1",
-    "jwt-decode": "^2.2.0",
-    "loadjs": "^4.0.1",
     "localforage": "^1.7.3",
     "lodash": "^4.17.15",
-    "memoizee": "^0.4.14",
     "mithril": "^2.0.4",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
