--- a/package.json
+++ b/package.json
@@ -64,13 +64,13 @@
     "e2e": "npx babel-node node_modules/ospec/bin/ospec './tests/**/**.e2e.js'",
     "entry": "npx babel-node node_modules/ospec/bin/ospec './tests/**/**.e2e.js' './tests/**/**.entry.js'",
     "test": "NODE_ENV=test nyc --reporter=text-summary --reporter=html npx babel-node node_modules/ospec/bin/ospec './tests/**/**.test.js' --require ./tests/test-setup.js",
-    "watch": "onchange -i 'src/**/*' 'tests/**/*.js' -- npm run build",
     "start": "webpack-dev-server --open",
-    "set-dev": "cp webpack.config.dev.js webpack.config.js",
-    "set-prod": "cp webpack.config.prod.js webpack.config.js",
     "prebuild": "clear && npm run test",
-    "build": "webpack --config webpack.config.js",
-    "postbuild": "[ -f ./deploy.js ] && node deploy.js"
+    "build": "webpack --config webpack.config.prod.js",
+    "build:dev": "webpack --config webpack.config.dev.js",
+    "build:prod": "webpack --config webpack.config.prod.js",
+    "postbuild": "[ -f ./deploy.js ] && node deploy.js",
+    "watch": "onchange -i 'src/**/*' 'tests/**/*.js' -- npm run build:dev"
   },
   "nyc": {
     "require": [
