configured for festigram.0441.design

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@auth0/auth0-spa-js": "^1.5.0",
     "@babel/cli": "^7.6.4",
     "@babel/core": "^7.6.4",
     "@babel/node": "^7.6.3",
@@ -19,45 +20,46 @@
     "babel-plugin-istanbul": "^5.2.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-react-jsx": "^6.24.1",
+    "blueimp-file-upload": "^10.2.0",
     "clean-webpack-plugin": "^3.0.0",
+    "cloudinary-core": "^2.7.4",
+    "cloudinary-jquery-file-upload": "^2.7.4",
     "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
+    "dragula": "^3.7.2",
+    "empty-promise": "^1.2.0",
     "esm": "^3.2.25",
     "fake-indexeddb": "^2.1.1",
     "fake-local-storage": "^1.1.0",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "ifdef-loader": "^2.1.5",
+    "jquery": "^3.4.1",
     "jsdom": "^15.2.0",
+    "localforage": "^1.7.3",
+    "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.8.0",
+    "mithril": "^2.0.4",
     "mithril-query": "^3.0.1",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
     "ncp": "^2.0.0",
     "nightmare": "^3.0.2",
     "nyc": "^14.1.1",
     "onchange": "^6.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "ospec": "^4.0.1",
+    "promise-polyfill": "^8.1.3",
+    "querystring": "^0.2.0",
     "rimraf": "^3.0.0",
     "script-loader": "^0.7.2",
+    "smart-search": "^0.2.0",
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^2.2.1",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.9.0",
-    "@auth0/auth0-spa-js": "^1.5.0",
-    "blueimp-file-upload": "^10.2.0",
-    "cloudinary-core": "^2.7.4",
-    "cloudinary-jquery-file-upload": "^2.7.4",
-    "dragula": "^3.7.2",
-    "empty-promise": "^1.2.0",
-    "jquery": "^3.4.1",
-    "localforage": "^1.7.3",
-    "lodash": "^4.17.15",
-    "mithril": "^2.0.4",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.27",
-    "promise-polyfill": "^8.1.3",
-    "smart-search": "^0.2.0"
+    "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {},
   "scripts": {
@@ -74,7 +76,8 @@
     "postbuild": "[ -f ./deploy.js ] && node deploy.js",
     "postbuild:dev": "npm run postbuild",
     "postbuild:prod": "npm run postbuild",
-    "watch": "npm run build:dev && onchange -i 'src/**/*' 'tests/**/*.js' -- npm run build:dev"
+    "watch": "npm run build:dev && onchange -i 'src/**/*' 'tests/**/*.js' -- npm run build:dev",
+    "watch:prod": "npm run build:prod && onchange -i 'src/**/*' 'tests/**/*.js' -- npm run build:prod"
   },
   "nyc": {
     "require": [
