--- a/package.json
+++ b/package.json
@@ -1,71 +1,70 @@
 {
-  "name": "client-44",
+  "name": "festigram",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "@auth0/auth0-spa-js": "^1.5.0",
-    "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.4",
-    "@babel/node": "^7.6.3",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-export-default-from": "^7.5.2",
-    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/register": "^7.6.2",
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@istanbuljs/nyc-config-babel": "^2.1.1",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-istanbul": "^5.2.0",
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/node": "^7.10.1",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-export-default-from": "^7.10.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/register": "^7.10.1",
+    "@istanbuljs/nyc-config-babel": "^3.0.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-istanbul": "^6.0.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-react-jsx": "^6.24.1",
-    "blueimp-file-upload": "^10.2.0",
     "clean-webpack-plugin": "^3.0.0",
-    "cloudinary-core": "^2.7.4",
-    "cloudinary-jquery-file-upload": "^2.7.4",
-    "cross-env": "^6.0.3",
-    "css-loader": "^3.2.0",
-    "dragula": "^3.7.2",
-    "empty-promise": "^1.2.0",
-    "esm": "^3.2.25",
-    "fake-indexeddb": "^2.1.1",
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.5.3",
+    "fake-indexeddb": "^3.0.1",
     "fake-local-storage": "^1.1.0",
-    "file-loader": "^4.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "ifdef-loader": "^2.1.5",
-    "jquery": "^3.4.1",
-    "jsdom": "^15.2.0",
-    "localforage": "^1.7.3",
-    "lodash": "^4.17.15",
-    "mini-css-extract-plugin": "^0.8.0",
-    "mithril": "^2.0.4",
-    "mithril-query": "^3.0.1",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.27",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "jsdom": "^16.2.2",
+    "mini-css-extract-plugin": "^0.9.0",
     "ncp": "^2.0.0",
     "nightmare": "^3.0.2",
-    "nyc": "^14.1.1",
-    "onchange": "^6.1.0",
+    "nyc": "^15.1.0",
+    "onchange": "^7.0.2",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "ospec": "^4.0.1",
-    "promise-polyfill": "^8.1.3",
+    "ospec": "^4.1.1",
     "querystring": "^0.2.0",
-    "rimraf": "^3.0.0",
+    "rimraf": "^3.0.2",
     "script-loader": "^0.7.2",
-    "smart-search": "^0.2.0",
-    "style-loader": "^1.0.0",
-    "terser-webpack-plugin": "^2.2.1",
-    "url-loader": "^2.2.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.9.0"
+    "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^3.0.3",
+    "url-loader": "^4.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@auth0/auth0-spa-js": "^1.9.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "blueimp-file-upload": "^10.29.0",
+    "cloudinary-core": "^2.8.2",
+    "cloudinary-jquery-file-upload": "^2.8.2",
+    "dragula": "^3.7.2",
+    "jquery": "^3.5.1",
+    "localforage": "^1.7.3",
+    "lodash": "^4.17.15",
+    "mithril": "^2.0.4",
+    "mithril-query": "^3.1.0",
+    "moment": "^2.26.0",
+    "moment-timezone": "^0.5.31",
+    "npm-check-updates": "^6.0.1",
+    "smart-search": "^0.2.0"
+  },
   "scripts": {
+    "preinstall": "[ -f ./node_modules ] && npx npm-force-resolutions",
     "e2e": "npx babel-node node_modules/ospec/bin/ospec './tests/**/**.e2e.js'",
     "entry": "npx babel-node node_modules/ospec/bin/ospec './tests/**/**.e2e.js' './tests/**/**.entry.js'",
-    "test": "NODE_ENV=test nyc --reporter=text-summary --reporter=html npx babel-node node_modules/ospec/bin/ospec './tests/**/**.test.js' --require ./tests/test-setup.js",
+    "test": "NODE_ENV=test nyc --reporter=text-summary --reporter=html npx babel-node node_modules/ospec/bin/ospec './tests/**/**.test.js' --preload ./tests/test-setup.js",
     "start": "webpack-dev-server --open",
     "prebuild": "clear && npm run test",
     "prebuild:dev": "npm run prebuild",
@@ -89,5 +88,10 @@
     ],
     "sourceMap": false,
     "instrument": false
+  },
+  "resolutions": {
+    "minimist": "1.2.3",
+    "mkdirp": "1.0.4",
+    "kind-of": "6.0.3"
   }
 }
