--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "blueimp-file-upload": "^10.29.0",
+    "caniuse-lite": "^1.0.30001163",
     "cloudinary-core": "^2.8.2",
     "cloudinary-jquery-file-upload": "^2.8.2",
     "dragula": "^3.7.2",
     "jquery": "^3.5.1",
+    "jwt-decode": "^3.1.2",
     "localforage": "^1.7.3",
     "lodash": "^4.17.15",
     "mithril": "^2.0.4",
@@ -61,21 +63,24 @@
     "smart-search": "^0.2.0"
   },
   "scripts": {
-    "preinstall": "[ -f ./node_modules ] && npx npm-force-resolutions",
     "e2e": "npx babel-node node_modules/ospec/bin/ospec './tests/**/**.e2e.js'",
     "entry": "npx babel-node node_modules/ospec/bin/ospec './tests/**/**.e2e.js' './tests/**/**.entry.js'",
     "test": "NODE_ENV=test nyc --reporter=text-summary --reporter=html npx babel-node node_modules/ospec/bin/ospec './tests/**/**.test.js' --preload ./tests/test-setup.js",
     "start": "webpack-dev-server --open",
     "prebuild": "clear && npm run test",
     "prebuild:dev": "npm run prebuild",
+    "prebuild:local": "npm run prebuild",
     "prebuild:prod": "npm run prebuild",
     "build": "webpack --config webpack.config.prod.js",
     "build:dev": "webpack --config webpack.config.dev.js",
+    "build:local": "webpack --config webpack.config.dev.js",
     "build:prod": "webpack --config webpack.config.prod.js",
     "postbuild": "[ -f ./deploy.js ] && node deploy.js",
     "postbuild:dev": "npm run postbuild",
+    "postbuild:local": "npm run postbuild",
     "postbuild:prod": "npm run postbuild",
     "watch": "npm run build:dev && onchange -i 'src/**/*' 'tests/**/*.js' -- npm run build:dev",
+    "watch:local": "npm run build:local && onchange -i 'src/**/*' 'tests/**/*.js' -- npm run build:local",
     "watch:prod": "npm run build:prod && onchange -i 'src/**/*' 'tests/**/*.js' -- npm run build:prod"
   },
   "nyc": {
