--- a/package.json
+++ b/package.json
@@ -73,12 +73,12 @@
     "prebuild:prod": "npm run prebuild",
     "build": "webpack --config webpack.config.prod.js",
     "build:dev": "webpack --config webpack.config.dev.js",
-    "build:local": "webpack --config webpack.config.dev.js",
+    "build:local": "webpack --config webpack.config.dev.js --env.auth='local'",
     "build:prod": "webpack --config webpack.config.prod.js",
-    "postbuild": "[ -f ./deploy.js ] && node deploy.js",
-    "postbuild:dev": "npm run postbuild",
-    "postbuild:local": "npm run postbuild",
-    "postbuild:prod": "npm run postbuild",
+    "postbuild:remote": "[ -f ./deploy.js ] && node deploy.js",
+    "postbuild:local": "[ -f ./deploy.js ] && node deploy.js local",
+    "postbuild:dev": "npm run postbuild:remote",
+    "postbuild:prod": "npm run postbuild:remote",
     "watch": "npm run build:dev && onchange -i 'src/**/*' 'tests/**/*.js' -- npm run build:dev",
     "watch:local": "npm run build:local && onchange -i 'src/**/*' 'tests/**/*.js' -- npm run build:local",
     "watch:prod": "npm run build:prod && onchange -i 'src/**/*' 'tests/**/*.js' -- npm run build:prod"
