--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "jsdom": "^16.2.2",
     "mini-css-extract-plugin": "^0.9.0",
     "ncp": "^2.0.0",
-    "nightmare": "^3.0.2",
+    "nightmare": "^2.8.0",
     "nyc": "^15.1.0",
     "onchange": "^7.0.2",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
@@ -60,6 +60,7 @@
     "moment": "^2.26.0",
     "moment-timezone": "^0.5.31",
     "npm-check-updates": "^6.0.1",
+    "puppeteer": "^7.1.0",
     "smart-search": "^0.2.0"
   },
   "scripts": {
