improve sw builds and switch moment js to dayjs

--- a/package.json
+++ b/package.json
@@ -18,18 +18,19 @@
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^8.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
     "fake-indexeddb": "^3.0.1",
     "fake-local-storage": "^1.1.0",
     "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.3.0",
+    "html-webpack-plugin": "^5.0.0",
     "jsdom": "^16.2.2",
-    "mini-css-extract-plugin": "^0.9.0",
+    "lighthouse": "^7.3.0",
+    "mini-css-extract-plugin": "^1.3.9",
     "ncp": "^2.0.0",
     "nyc": "^15.1.0",
     "onchange": "^7.0.2",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "ospec": "^4.1.1",
     "puppeteer": "^7.1.0",
     "querystring": "^0.2.0",
@@ -38,18 +39,25 @@
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^3.0.3",
     "url-loader": "^4.1.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.1.0",
+    "webpack-bundle-analyzer": "^4.4.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.0",
+    "workbox-cacheable-response": "^6.1.2",
+    "workbox-expiration": "^6.1.2",
+    "workbox-precaching": "^6.1.2",
+    "workbox-strategies": "^6.1.2",
+    "workbox-webpack-plugin": "^6.1.2"
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.9.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "blueimp-file-upload": "^10.29.0",
+    "blueimp-file-upload": "^9.11.2",
     "caniuse-lite": "^1.0.30001163",
     "cloudinary-core": "^2.8.2",
     "cloudinary-jquery-file-upload": "^2.8.2",
+    "dayjs": "^1.10.4",
     "dragula": "^3.7.2",
     "jquery": "^3.5.1",
     "jwt-decode": "^3.1.2",
@@ -57,8 +65,6 @@
     "lodash": "^4.17.15",
     "mithril": "^2.0.4",
     "mithril-query": "^3.1.0",
-    "moment": "^2.26.0",
-    "moment-timezone": "^0.5.31",
     "npm-check-updates": "^6.0.1",
     "smart-search": "^0.2.0"
   },
@@ -81,7 +87,8 @@
     "postbuild:prod": "npm run postbuild:remote",
     "watch": "npm run build:dev && onchange -i 'src/**/*' -- npm run build:dev",
     "watch:local": "npm run build:local && onchange -i 'src/**/*' -- npm run build:local",
-    "watch:prod": "npm run build:prod && onchange -i 'src/**/*' -- npm run build:prod"
+    "watch:prod": "npm run build:prod && onchange -i 'src/**/*' -- npm run build:prod",
+    "bundle-report": "webpack-bundle-analyzer --port 4200 compilation-stats.json"
   },
   "nyc": {
     "require": [
