made wikipedia link secure

--- a/package.json
+++ b/package.json
@@ -1,108 +1,109 @@
 {
-  "name": "festigram",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "devDependencies": {
-    "@babel/cli": "^7.10.1",
-    "@babel/core": "^7.10.2",
-    "@babel/node": "^7.10.1",
-    "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/plugin-proposal-export-default-from": "^7.10.1",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.10.2",
-    "@babel/register": "^7.10.1",
-    "@istanbuljs/nyc-config-babel": "^3.0.0",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-istanbul": "^6.0.0",
-    "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^8.0.0",
-    "cross-env": "^7.0.2",
-    "css-loader": "^3.5.3",
-    "fake-indexeddb": "^3.0.1",
-    "fake-local-storage": "^1.1.0",
-    "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^5.0.0",
-    "jsdom": "^16.2.2",
-    "lighthouse": "^7.3.0",
-    "mini-css-extract-plugin": "^1.3.9",
-    "ncp": "^2.0.0",
-    "nyc": "^15.1.0",
-    "onchange": "^7.0.2",
-    "ospec": "^4.1.1",
-    "puppeteer": "^7.1.0",
-    "querystring": "^0.2.0",
-    "rimraf": "^3.0.2",
-    "script-loader": "^0.7.2",
-    "style-loader": "^1.2.1",
-    "terser-webpack-plugin": "^3.0.3",
-    "url-loader": "^4.1.0",
-    "webpack": "^5.1.0",
-    "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.0",
-    "workbox-cacheable-response": "^6.1.2",
-    "workbox-expiration": "^6.1.2",
-    "workbox-precaching": "^6.1.2",
-    "workbox-strategies": "^6.1.2",
-    "workbox-webpack-plugin": "^6.1.2"
-  },
-  "dependencies": {
-    "@auth0/auth0-spa-js": "^1.9.0",
-    "@cloudinary/base": "^1.0.0-beta.1",
-    "blueimp-file-upload": "^9.11.2",
-    "caniuse-lite": "^1.0.30001163",
-    "cloudinary-core": "^2.8.2",
-    "cloudinary-jquery-file-upload": "^2.8.2",
-    "dayjs": "^1.10.4",
-    "dragula": "^3.7.2",
-    "jquery": "^3.5.1",
-    "jwt-decode": "^3.1.2",
-    "localforage": "^1.7.3",
-    "lodash": "^4.17.15",
-    "mithril": "^2.0.4",
-    "mithril-query": "^3.1.0",
-    "npm-check-updates": "^6.0.1",
-    "smart-search": "^0.2.0"
-  },
-  "scripts": {
-    "e2e": "clear && npx babel-node node_modules/ospec/bin/ospec './tests/**/**.e2e.js'",
-    "entry": "npx babel-node node_modules/ospec/bin/ospec './tests/**/**.e2e.js' './tests/**/**.entry.js'",
-    "test": "NODE_ENV=test nyc --reporter=text-summary --reporter=html npx babel-node node_modules/ospec/bin/ospec './tests/**/**.test.js' --preload ./tests/test-setup.js",
-    "start": "webpack-dev-server --open",
-    "prebuild": "clear && npm run test",
-    "prebuild:dev": "npm run prebuild",
-    "prebuild:local": "npm run prebuild",
-    "prebuild:prod": "npm run prebuild",
-    "build": "webpack --config webpack.config.prod.js",
-    "build:dev": "webpack --config webpack.config.dev.js",
-    "build:local": "webpack --config webpack.config.dev.js --env.auth='local'",
-    "build:prod": "webpack --config webpack.config.prod.js",
-    "postbuild:remote": "[ -f ./deploy.js ] && node deploy.js",
-    "postbuild:local": "[ -f ./deploy.js ] && node deploy.js local",
-    "postbuild:dev": "npm run postbuild:remote",
-    "postbuild:prod": "npm run postbuild:remote",
-    "watch": "npm run build:dev && onchange --await-write-finish 1500 -i 'src/**/*' -- npm run build:dev",
-    "watch:local": "npm run build:local && onchange --await-write-finish 1500 -i 'src/**/*' -- npm run build:local",
-    "watch:prod": "npm run build:prod && onchange --await-write-finish 1500 -i 'src/**/*' -- npm run build:prod",
-    "bundle-report": "webpack-bundle-analyzer --port 4200 compilation-stats-210322.json"
-  },
-  "nyc": {
-    "require": [
-      "@babel/register"
-    ],
-    "reporter": [
-      "lcov",
-      "text"
-    ],
-    "sourceMap": false,
-    "instrument": false
-  },
-  "resolutions": {
-    "minimist": "1.2.3",
-    "mkdirp": "1.0.4",
-    "kind-of": "6.0.3"
-  }
+	"name": "festigram",
+	"version": "1.0.0",
+	"main": "index.js",
+	"license": "MIT",
+	"devDependencies": {
+		"@babel/cli": "^7.10.1",
+		"@babel/core": "^7.10.2",
+		"@babel/node": "^7.10.1",
+		"@babel/plugin-proposal-class-properties": "^7.10.1",
+		"@babel/plugin-proposal-export-default-from": "^7.10.1",
+		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
+		"@babel/preset-env": "^7.10.2",
+		"@babel/register": "^7.10.1",
+		"@istanbuljs/nyc-config-babel": "^3.0.0",
+		"babel-loader": "^8.1.0",
+		"babel-plugin-istanbul": "^6.0.0",
+		"babel-plugin-lodash": "^3.3.4",
+		"babel-plugin-transform-react-jsx": "^6.24.1",
+		"clean-webpack-plugin": "^3.0.0",
+		"copy-webpack-plugin": "^8.0.0",
+		"cross-env": "^7.0.2",
+		"css-loader": "^3.5.3",
+		"fake-indexeddb": "^3.0.1",
+		"fake-local-storage": "^1.1.0",
+		"file-loader": "^6.0.0",
+		"html-webpack-plugin": "^5.0.0",
+		"jsdom": "^16.2.2",
+		"lighthouse": "^7.3.0",
+		"mini-css-extract-plugin": "^1.3.9",
+		"ncp": "^2.0.0",
+		"nyc": "^15.1.0",
+		"onchange": "^7.0.2",
+		"ospec": "^4.1.1",
+		"puppeteer": "^7.1.0",
+		"querystring": "^0.2.0",
+		"rimraf": "^3.0.2",
+		"script-loader": "^0.7.2",
+		"style-loader": "^1.2.1",
+		"terser-webpack-plugin": "^3.0.3",
+		"url-loader": "^4.1.0",
+		"webpack": "^5.1.0",
+		"webpack-bundle-analyzer": "^4.4.0",
+		"webpack-cli": "^4.5.0",
+		"webpack-dev-server": "^3.11.0",
+		"workbox-cacheable-response": "^6.1.2",
+		"workbox-expiration": "^6.1.2",
+		"workbox-precaching": "^6.1.2",
+		"workbox-strategies": "^6.1.2",
+		"workbox-webpack-plugin": "^6.1.2"
+	},
+	"dependencies": {
+		"@auth0/auth0-spa-js": "^1.9.0",
+		"@cloudinary/base": "^1.0.0-beta.1",
+		"blueimp-file-upload": "^9.11.2",
+		"caniuse-lite": "^1.0.30001163",
+		"cloudinary-core": "^2.8.2",
+		"cloudinary-jquery-file-upload": "^2.8.2",
+		"dayjs": "^1.10.4",
+		"dragula": "^3.7.2",
+		"jquery": "^3.5.1",
+		"jwt-decode": "^3.1.2",
+		"localforage": "^1.7.3",
+		"lodash": "^4.17.15",
+		"mithril": "^2.0.4",
+		"mithril-query": "^3.1.0",
+		"npm-check-updates": "^6.0.1",
+		"smart-search": "^0.2.0"
+	},
+	"scripts": {
+		"e2e": "clear && npx babel-node node_modules/ospec/bin/ospec './tests/**/**.e2e.js'",
+		"entry": "npx babel-node node_modules/ospec/bin/ospec './tests/**/**.e2e.js' './tests/**/**.entry.js'",
+		"test": "NODE_ENV=test nyc --reporter=text-summary --reporter=html npx babel-node node_modules/ospec/bin/ospec './tests/**/**.test.js' --preload ./tests/test-setup.js",
+		"start": "webpack-dev-server --open",
+		"prebuild": "clear && npm run test",
+		"prebuild:dev": "npm run prebuild",
+		"prebuild:local": "npm run prebuild",
+		"prebuild:prod": "npm run prebuild",
+		"build": "webpack --config webpack.config.prod.js",
+		"build:dev": "webpack --config webpack.config.dev.js",
+		"build:local": "webpack --config webpack.config.dev.js --env.auth='local'",
+		"build:prod": "webpack --config webpack.config.prod.js",
+		"postbuild:remote": "[ -f ./deploy.js ] && node deploy.js",
+		"postbuild:local": "[ -f ./deploy.js ] && node deploy.js local",
+		"postbuild": "[ -f ./deploy.js ] && node deploy.js",
+		"postbuild:dev": "npm run postbuild:remote",
+		"postbuild:prod": "npm run postbuild:remote",
+		"watch": "npm run build:dev && onchange --await-write-finish 1500 -i 'src/**/*' -- npm run build:dev",
+		"watch:local": "npm run build:local && onchange --await-write-finish 1500 -i 'src/**/*' -- npm run build:local",
+		"watch:prod": "npm run build:prod && onchange --await-write-finish 1500 -i 'src/**/*' -- npm run build:prod",
+		"bundle-report": "webpack-bundle-analyzer --port 4200 compilation-stats-210322.json"
+	},
+	"nyc": {
+		"require": [
+			"@babel/register"
+		],
+		"reporter": [
+			"lcov",
+			"text"
+		],
+		"sourceMap": false,
+		"instrument": false
+	},
+	"resolutions": {
+		"minimist": "1.2.3",
+		"mkdirp": "1.0.4",
+		"kind-of": "6.0.3"
+	}
 }
