--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
 		"@auth0/auth0-spa-js": "^1.9.0",
 		"@cloudinary/base": "^1.0.0-beta.1",
 		"blueimp-file-upload": "^9.11.2",
-		"caniuse-lite": "^1.0.30001163",
 		"cloudinary-core": "^2.8.2",
 		"cloudinary-jquery-file-upload": "^2.8.2",
 		"dayjs": "^1.10.4",
@@ -78,7 +77,7 @@
 		"prebuild:prod": "npm run prebuild",
 		"build": "webpack --config webpack.config.prod.js",
 		"build:dev": "webpack --config webpack.config.dev.js",
-		"build:local": "webpack --config webpack.config.dev.js --env.auth='local'",
+		"build:local": "webpack --config webpack.config.dev.js --env auth='local'",
 		"build:prod": "webpack --config webpack.config.prod.js",
 		"postbuild:remote": "[ -f ./deploy.js ] && node deploy.js",
 		"postbuild:local": "[ -f ./deploy.js ] && node deploy.js local",
