--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
 		"workbox-webpack-plugin": "^6.1.2"
 	},
 	"dependencies": {
-		"@auth0/auth0-spa-js": "^1.9.0",
 		"@cloudinary/base": "^1.0.0-beta.1",
 		"blueimp-file-upload": "^9.11.2",
 		"cloudinary-core": "^2.8.2",
@@ -75,17 +74,10 @@
 		"prebuild:dev": "npm run prebuild",
 		"prebuild:local": "npm run prebuild",
 		"prebuild:prod": "npm run prebuild",
-		"build": "webpack --config webpack.config.prod.js",
-		"build:dev": "webpack --config webpack.config.dev.js",
-		"build:local": "webpack --config webpack.config.dev.js --env auth='local'",
-		"build:prod": "webpack --config webpack.config.prod.js",
-		"postbuild:remote": "[ -f ./deploy.js ] && node deploy.js",
-		"postbuild:local": "[ -f ./deploy.js ] && node deploy.js local",
-		"postbuild": "[ -f ./deploy.js ] && node deploy.js",
-		"postbuild:dev": "npm run postbuild:remote",
-		"postbuild:prod": "npm run postbuild:remote",
+		"build": "webpack --config webpack.config.prod.js --env auth='local'",
+		"build:dev": "webpack --config webpack.config.dev.js --env auth='local'",
+		"build:prod": "webpack --config webpack.config.prod.js --env auth='local'",
 		"watch": "npm run build:dev && onchange --await-write-finish 1500 -i 'src/**/*' -- npm run build:dev",
-		"watch:local": "npm run build:local && onchange --await-write-finish 1500 -i 'src/**/*' -- npm run build:local",
 		"watch:prod": "npm run build:prod && onchange --await-write-finish 1500 -i 'src/**/*' -- npm run build:prod",
 		"bundle-report": "webpack-bundle-analyzer --port 4200 compilation-stats-210322.json"
 	},
