updating api calls for new api domain

--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,21 @@
 {
   "presets": [
-  ["@babel/env", { "targets": { "node": 6 } }]
+    [
+      "@babel/env",
+      {
+        "targets": {
+          "browsers": "> 1%"
+        }
+      }
+    ]
   ],
   "plugins": [
-    ["transform-react-jsx", {
-      "pragma": "m"
-    }],
+    [
+      "transform-react-jsx",
+      {
+        "pragma": "m"
+      }
+    ],
     "lodash",
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-proposal-export-default-from",
