--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
 		"url-loader": "^4.1.0",
 		"webpack": "^5.1.0",
 		"webpack-bundle-analyzer": "^4.4.0",
-		"webpack-cli": "^4.5.0",
-		"webpack-dev-server": "^3.11.0",
+		"webpack-cli": "^4.10.0",
+		"webpack-dev-server": "^4.9.3",
 		"workbox-cacheable-response": "^6.1.2",
 		"workbox-expiration": "^6.1.2",
 		"workbox-precaching": "^6.1.2",
@@ -72,15 +72,18 @@
 		"test": "NODE_ENV=test nyc --reporter=text-summary --reporter=html npx babel-node node_modules/ospec/bin/ospec './tests/**/**.test.js' --preload ./tests/test-setup.js",
 		"start": "webpack-dev-server --open",
 		"prebuild": "clear && npm run test",
-		"prebuild:dev": "npm run prebuild",
 		"prebuild:local": "npm run prebuild",
-		"prebuild:prod": "npm run prebuild",
-		"build": "webpack --config webpack.config.prod.js --env auth='local'",
-		"build:dev": "webpack --config webpack.config.dev.js --env auth='local'",
-		"build:prod": "webpack --config webpack.config.prod.js --env auth='local'",
+		"prebuild:remote": "npm run prebuild",
+		"build": "webpack --config webpack.config.prod.js",
+		"build:local": "webpack --config webpack.config.dev.js --env LOCAL_API",
+		"build:remote": "webpack --config webpack.config.dev.js",
 		"postbuild": "npm run deploy",
-		"watch": "npm run build:dev && onchange --await-write-finish 1500 -i 'src/**/*' -- npm run build:dev",
-		"watch:prod": "npm run build:prod && onchange --await-write-finish 1500 -i 'src/**/*' -- npm run build:prod",
+		"serve": "webpack serve --config webpack.config.dev.js --open",
+		"serve:local": "webpack serve --env LOCAL_API --config webpack.config.dev.js --open",
+		"serve:prod": "webpack serve --open --config webpack.config.prod.js",
+		"serve:local:prod": "webpack serve --env LOCAL_API --config webpack.config.prod.js --open",
+		"watch": "webpack --config webpack.config.dev.js --watch",
+		"watch:local": "webpack --config webpack.config.dev.js --env LOCAL_API --watch",
 		"bundle-report": "webpack-bundle-analyzer --port 4200 compilation-stats-210322.json"
 	},
 	"nyc": {
