--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
 	"main": "index.js",
 	"license": "MIT",
 	"devDependencies": {
-		"@babel/cli": "^7.10.1",
-		"@babel/core": "^7.10.2",
-		"@babel/node": "^7.10.1",
+		"@babel/cli": "^7.18.6",
+		"@babel/core": "^7.18.6",
+		"@babel/node": "^7.18.6",
 		"@babel/plugin-proposal-class-properties": "^7.10.1",
 		"@babel/plugin-proposal-export-default-from": "^7.10.1",
 		"@babel/plugin-syntax-dynamic-import": "^7.8.3",
-		"@babel/preset-env": "^7.10.2",
+		"@babel/preset-env": "^7.18.6",
 		"@babel/register": "^7.10.1",
 		"@istanbuljs/nyc-config-babel": "^3.0.0",
 		"babel-loader": "^8.1.0",
@@ -26,9 +26,9 @@
 		"file-loader": "^6.0.0",
 		"html-webpack-plugin": "^5.0.0",
 		"jsdom": "^16.2.2",
-		"lighthouse": "^7.3.0",
 		"mini-css-extract-plugin": "^1.3.9",
 		"ncp": "^2.0.0",
+		"npm-check-updates": "^15.2.6",
 		"nyc": "^15.1.0",
 		"onchange": "^7.0.2",
 		"ospec": "^4.1.1",
@@ -47,9 +47,10 @@
 		"workbox-expiration": "^6.1.2",
 		"workbox-precaching": "^6.1.2",
 		"workbox-strategies": "^6.1.2",
-		"workbox-webpack-plugin": "^6.1.2"
+		"workbox-webpack-plugin": "^6.5.3"
 	},
 	"dependencies": {
+		"@0441design/auth-fg-browser": "^1.0.3",
 		"@cloudinary/base": "^1.0.0-beta.1",
 		"blueimp-file-upload": "^9.11.2",
 		"cloudinary-core": "^2.8.2",
@@ -62,7 +63,6 @@
 		"lodash": "^4.17.15",
 		"mithril": "^2.0.4",
 		"mithril-query": "^3.1.0",
-		"npm-check-updates": "^6.0.1",
 		"smart-search": "^0.2.0"
 	},
 	"scripts": {
