--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
 		"@babel/preset-env": "^7.18.6",
 		"@babel/register": "^7.10.1",
 		"@istanbuljs/nyc-config-babel": "^3.0.0",
+		"@vitest/ui": "^0.18.0",
 		"babel-loader": "^8.1.0",
 		"babel-plugin-istanbul": "^6.0.0",
 		"babel-plugin-lodash": "^3.3.4",
 		"babel-plugin-transform-react-jsx": "^6.24.1",
+		"c8": "^7.11.3",
 		"clean-webpack-plugin": "^3.0.0",
 		"copy-webpack-plugin": "^8.0.0",
 		"cross-env": "^7.0.2",
@@ -25,6 +27,7 @@
 		"fake-local-storage": "^1.1.0",
 		"file-loader": "^6.0.0",
 		"html-webpack-plugin": "^5.0.0",
+		"html2hyperscript": "^1.0.1",
 		"jsdom": "^16.2.2",
 		"mini-css-extract-plugin": "^1.3.9",
 		"ncp": "^2.0.0",
@@ -39,6 +42,8 @@
 		"style-loader": "^1.2.1",
 		"terser-webpack-plugin": "^3.0.3",
 		"url-loader": "^4.1.0",
+		"vitest": "^0.18.0",
+		"vitest-fetch-mock": "^0.2.1",
 		"webpack": "^5.1.0",
 		"webpack-bundle-analyzer": "^4.4.0",
 		"webpack-cli": "^4.10.0",
@@ -50,7 +55,7 @@
 		"workbox-webpack-plugin": "^6.5.3"
 	},
 	"dependencies": {
-		"@0441design/auth-fg-browser": "^1.0.4",
+		"@0441design/auth-fg-browser": "^1.2.0",
 		"@cloudinary/base": "^1.0.0-beta.1",
 		"blueimp-file-upload": "^9.11.2",
 		"cloudinary-core": "^2.8.2",
@@ -69,7 +74,7 @@
 		"deploy": "aws s3 sync ./dist s3://festigram.app",
 		"e2e": "clear && npx babel-node node_modules/ospec/bin/ospec './tests/**/**.e2e.js'",
 		"entry": "npx babel-node node_modules/ospec/bin/ospec './tests/**/**.e2e.js' './tests/**/**.entry.js'",
-		"test": "NODE_ENV=test nyc --reporter=text-summary --reporter=html npx ospec './tests/**/**.test.js' --preload ./tests/test-setup.js",
+		"test": "vitest run",
 		"start": "webpack-dev-server --open",
 		"prebuild": "clear && npm run test",
 		"prebuild:local": "npm run prebuild",
